fdo#38176 fix RTF export of non-breaking space